--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "leaflet-geosearch": "^4.2.2",
-    "next": "16.0.3",
+    "next": "^16.0.7",
     "react": "^19.0.0-rc.1",
     "react-dom": "^19.0.0-rc.1",
     "react-icons": "^4.11.0",
